--- a/conveyor.conf
+++ b/conveyor.conf
@@ -11,6 +11,7 @@ temp {
 		// script. These keys are overridden by build.sh and point to where we can find the fixed up native packages.
 		mac.amd64   = please-run-the-external-build-script
 		mac.aarch64 = please-run-the-external-build-script
+		windows.amd64 = target/windows
 	}
 }
 
@@ -21,14 +22,20 @@ app {
 
 	inputs = [ target/jcef-conveyor-1.0-SNAPSHOT.jar ] ${app.inputs}
 
-	machines = "mac.{amd,aarch}64"
+	machines = [ mac, windows.amd64 ]
 
 	jvm {
 		gui = jcefconveyor.SampleFrame
+	}
 
-		system-properties {
-			// Where JCEF can find the CEF install.
-			app.dir.mac.frameworks = "&&/../Frameworks"
+	windows {
+		inputs += target/appassembler/repo
+		amd64.inputs += ${temp.jcef.windows.amd64} -> jcef
+
+		// JCEF expects install.lock to exist which isn't in the tarball, otherwise it tries to delete bits of the app!
+		inputs += {
+			content = "."
+			to = jcef/install.lock
 		}
 	}
 
