Be explicit about opening internal packages.

--- a/conveyor.conf
+++ b/conveyor.conf
@@ -26,6 +26,15 @@ app {
 
 	jvm {
 		gui = jcefconveyor.SampleFrame
+
+		// JCEF depends on some Java internals.
+		// This section is optional because Conveyor will infer them if missing. However it's good to be explicit.
+		options = ${app.jvm.options} [
+			"--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED"
+			"--add-opens=java.desktop/sun.awt=ALL-UNNAMED"
+			"--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED"
+			"--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED"
+		]
 	}
 
 	windows {
