In Conveyor 7.2 the build script is no longer needed.

--- a/conveyor.conf
+++ b/conveyor.conf
@@ -1,18 +1,22 @@
 // You shouldn't build this directly, run build.sh instead.
 
 include required("/stdlib/jdk/19/amazon.conf")
-include required("/stdlib/jvm/from-maven.conf")
+// include required("/stdlib/jvm/from-maven.conf")
 
-// include required("self-signing.conf")
+jcef {
+	// JCEF Maven version and the version of Chrome itself don't quite match for some reason. C'est la vie.
+	maven.ver = 110.0.25
+	maven.hash = 87476e9
+	chrome.hash = g75b1c96
+	chrome.ver = 110.0.5481.78
 
-temp {
-	jcef {
-		// Conveyor's input specs aren't quite powerful enough to undo all the wrapping imposed by jcef-maven. We need an external helper
-		// script. These keys are overridden by build.sh and point to where we can find the fixed up native packages.
-		mac.amd64   = please-run-the-external-build-script
-		mac.aarch64 = please-run-the-external-build-script
-		windows.amd64 = target/windows
-	}
+	releases = "https://github.com/jcefmaven/jcefmaven/releases/download/"
+
+	// JCEF hides the native files we need inside a tarball, which is then wrapped inside a zip/jar <facepalm>.
+	// Fortunately, Conveyor can handle that! We just have to use the syntax zip:https://example.com/foo.zip!/path/in/zip.tar.gz
+	mac.amd64   = "zip:"${jcef.releases}${jcef.maven.ver}"/jcef-natives-macosx-amd64-jcef-"${jcef.maven.hash}"+cef-"${jcef.maven.ver}"+"${jcef.chrome.hash}"+chromium-"${jcef.chrome.ver}".jar!/jcef-natives-macosx-amd64-jcef-"${jcef.maven.hash}"+cef-"${jcef.maven.ver}"+"${jcef.chrome.hash}"+chromium-"${jcef.chrome.ver}".tar.gz"
+	mac.aarch64 = "zip:"${jcef.releases}${jcef.maven.ver}"/jcef-natives-macosx-arm64-jcef-"${jcef.maven.hash}"+cef-"${jcef.maven.ver}"+"${jcef.chrome.hash}"+chromium-"${jcef.chrome.ver}".jar!/jcef-natives-macosx-arm64-jcef-"${jcef.maven.hash}"+cef-"${jcef.maven.ver}"+"${jcef.chrome.hash}"+chromium-"${jcef.chrome.ver}".tar.gz"
+	windows.amd64 = "zip:"${jcef.releases}${jcef.maven.ver}"/jcef-natives-windows-amd64-jcef-"${jcef.maven.hash}"+cef-"${jcef.maven.ver}"+"${jcef.chrome.hash}"+chromium-"${jcef.chrome.ver}".jar!/jcef-natives-windows-amd64-jcef-"${jcef.maven.hash}"+cef-"${jcef.maven.ver}"+"${jcef.chrome.hash}"+chromium-"${jcef.chrome.ver}".tar.gz"
 }
 
 app {
@@ -39,7 +43,7 @@ app {
 
 	windows {
 		inputs += target/appassembler/repo
-		amd64.inputs += ${temp.jcef.windows.amd64} -> jcef
+		amd64.inputs += ${jcef.windows.amd64} -> jcef
 
 		// JCEF expects install.lock to exist which isn't in the tarball, otherwise it tries to delete bits of the app!
 		inputs += {
@@ -52,11 +56,11 @@ app {
 		// CEF is a series of frameworks and helper apps. JCEF adds some extra files on top. We get them from the natives tarballs
 		// that were downloaded by build.sh
 		amd64.bundle-extras += {
-			from = ${temp.jcef.mac.amd64}
+			from = ${jcef.mac.amd64}
 			to = Frameworks
 		}
 		aarch64.bundle-extras += {
-			from = ${temp.jcef.mac.aarch64}
+			from = ${jcef.mac.aarch64}
 			to = Frameworks
 		}
 
