Add Linux, same as Windows.

--- a/conveyor.conf
+++ b/conveyor.conf
@@ -6,16 +6,15 @@ jcef {
 	// JCEF hides the native files we need inside a tarball, which is then wrapped inside a zip/jar.
 	// Conveyor can handle that! We just have to use the syntax zip:https://example.com/foo.zip!/path/in/zip.tar.gz
 	// The version numbers here come from the Gradle build.
+	windows.amd64 = "zip:"${jcef.releases}${jcef.ver}"/jcef-natives-windows-amd64-jcef-"${jcef.commit-hash}"+cef-"${jcef.cef-ver}".jar!/jcef-natives-windows-amd64-jcef-"${jcef.commit-hash}"+cef-"${jcef.cef-ver}".tar.gz"
 	mac.amd64   = "zip:"${jcef.releases}${jcef.ver}"/jcef-natives-macosx-amd64-jcef-"${jcef.commit-hash}"+cef-"${jcef.cef-ver}".jar!/jcef-natives-macosx-amd64-jcef-"${jcef.commit-hash}"+cef-"${jcef.cef-ver}".tar.gz"
 	mac.aarch64 = "zip:"${jcef.releases}${jcef.ver}"/jcef-natives-macosx-arm64-jcef-"${jcef.commit-hash}"+cef-"${jcef.cef-ver}".jar!/jcef-natives-macosx-arm64-jcef-"${jcef.commit-hash}"+cef-"${jcef.cef-ver}".tar.gz"
-	windows.amd64 = "zip:"${jcef.releases}${jcef.ver}"/jcef-natives-windows-amd64-jcef-"${jcef.commit-hash}"+cef-"${jcef.cef-ver}".jar!/jcef-natives-windows-amd64-jcef-"${jcef.commit-hash}"+cef-"${jcef.cef-ver}".tar.gz"
+	linux.amd64.glibc = "zip:"${jcef.releases}${jcef.ver}"/jcef-natives-linux-amd64-jcef-"${jcef.commit-hash}"+cef-"${jcef.cef-ver}".jar!/jcef-natives-linux-amd64-jcef-"${jcef.commit-hash}"+cef-"${jcef.cef-ver}".tar.gz"
 }
 
 app {
 	rdns-name = dev.hydraulic.jcef-conveyor
 	site.base-url = "localhost:5000"
-
-	machines = [ mac, windows.amd64 ]
 
 	windows {
 		amd64.inputs += ${jcef.windows.amd64} -> jcef
@@ -61,6 +60,16 @@ app {
 			NSBluetoothAlwaysUsageDescription = This app needs access to Bluetooth
 			NSBluetoothPeripheralUsageDescription = This app needs access to Bluetooth
 			NSCameraUsageDescription = This app needs access to the camera
+		}
+	}
+
+	linux {
+		amd64.glibc.inputs += ${jcef.linux.amd64.glibc} -> jcef
+
+		// JCEF expects install.lock to exist which isn't in the tarball, otherwise it tries to delete bits of the app!
+		inputs += {
+			content = "."
+			to = jcef/install.lock
 		}
 	}
 }
