Bring jcef-conveyor up to Conveyor 10.

--- a/conveyor.conf
+++ b/conveyor.conf
@@ -14,7 +14,13 @@ jcef {
 
 app {
   rdns-name = dev.hydraulic.jcef-conveyor
-  site.base-url = "localhost:5000"
+  vcs-url = github.com/hydraulic-software/jcef-conveyor
+  site {
+    github {
+      oauth-token = ${env.GITHUB_TOKEN}
+      pages-branch = gh-pages
+    }
+  }
 
   windows {
     amd64.inputs += ${jcef.windows.amd64} -> jcef
@@ -74,4 +80,4 @@ app {
   }
 }
 
-conveyor.compatibility-level = 7
+conveyor.compatibility-level = 10
